--- a/handsontable/src/styles/components/plugins/_dropdown-menu.scss
+++ b/handsontable/src/styles/components/plugins/_dropdown-menu.scss
@@ -142,8 +142,7 @@
         text-overflow: ellipsis;
         background: var(--ht-background-color, #ffffff);
         cursor: pointer;
-        transition: background calc(0.5 * var(--ht-table-transition))
-          ease-in-out;
+        transition: var(--ht-table-transition) background ease-in-out;
 
         &:first-child {
           border-top-width: 0;
@@ -162,7 +161,7 @@
           &:hover {
             background: var(--ht-menu-item-hover-color, #e5e5e9) !important;
             cursor: pointer;
-            box-shadow: none !important;
+            // box-shadow: none !important;
           }
 
           &.current:not([aria-expanded="true"]) {
@@ -266,6 +265,7 @@
     .htUIMultipleSelect .ht_master .wtHolder {
       overflow-y: scroll !important;
       background: transparent;
+      border-radius: 0 !important;
 
       .htCore {
         box-shadow: none;
